Some refactoring and update game SDK